# tetcutter

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  build.sh  index.html  license.txt  params.json  todo.txt
data/meshes/matlab/: faces.txt  nodes.txt  skull.veg  whitematter.veg
data/meshes/veg/: disc.1.veg  dumbel.veg  dumbelclose.veg  eggshell.veg  implicit_sphere.veg  peanut.veg  pyramid.1.veg  tumor.veg
data/output/: eggshell_h16_v8_cuts1.veg  tets_cuts0.veg  tets_cuts1.veg  truthcube_2x2x2_cuts1.veg
data/scripts/: takescreencast.sh
data/shaders/: avataredges.fsh  avataredges.vsh  bluepoints.fsh  bluepoints.vsh  gizmo.fsh  gizmo.vsh  glyph.fsh  glyph.vsh  phong.vsh  textured.fsh  textured.vsh  volmeshphong.fsh  volmeshphong.vsh
doc/: Doxyfile
doc/html/: 3rdparty_2loki_2test_2SmartPtr_2base_8h_source.html  3rdparty_2tbb_2examples_2parallel__do_2parallel__preorder_2Matrix_8h_source.html  AbstractFactoryTest_8h_source.html  AbstractFactory_8h_source.html  Allocator_8h_source.html  App_8xaml_8h_source.html  AssocVectorTest_8h_source.html  AssocVector_8h_source.html  Board_8h_source.html  CachedFactory_8h_source.html  CheckReturn_8h_source.html  Checker_8h.html  Checker_8h_source.html  ConstPolicy_8h_source.html  Customize_8h_source.html  D__latch_8h_source.html  DataGeneratorsTest_8h_source.html  DataGenerators_8h_source.html  DefaultAlloc_8cpp.html  DirectXBase_8h_source.html  DirectXPage_8xaml_8h_source.html  EmptyType_8h_source.html  Evolution_8h_source.html  FactoryParmTest_8h_source.html  FactoryTest_8h_source.html  Factory_8h_source.html  Form1_8h_source.html  Function_8h_source.html  FunctorTest_8h_source.html  Functor_8h_source.html  Graph_8h_source.html  HierarchyGenerators_8h_source.html  Key_8h_source.html  LevelMutex_8cpp.html  LevelMutex_8h.html  LevelMutex_8h_source.html  LockingPtr_8h_source.html  LokiExport_8h_source.html  LokiTypeInfo_8h_source.html  MapMemory_8h_source.html  (+5172 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  (+154 more)
doc/latex/: Checker_8h.tex  DefaultAlloc_8cpp.tex  LevelMutex_8cpp.tex  LevelMutex_8h.tex  annotated.tex  bug.tex  classA2.tex  classAVTestClass.tex  classAbstractCreator.eps  classAbstractCreator.tex  classAbstractFactory.tex  classAbstractFactoryTest.eps  classAbstractFactoryTest.tex  classAbstractProduct.eps  classAbstractProduct.tex  classAbstractValueType.tex  classAccumulator.eps  classAccumulator.tex  classAddRemoveBody.eps  classAddRemoveBody.tex  classAddToTable.eps  classAddToTable.tex  classAlignedAtomic.eps  classAlignedAtomic.tex  classAllocInfo.tex  classAllocTask.tex  classAllocatorStringStorage.eps  classAllocatorStringStorage.tex  classAnotherThreadFunc.eps  classAnotherThreadFunc.tex  classApplyOverlay.tex  classApplySplitOverlay.tex  classApplySplitOverlayCV.tex  classApplySplitOverlayETS.tex  classArenaObserver.eps  classArenaObserver.tex  classArrayElement.tex  classAssignBody.eps  classAssignBody.tex  classAssignBody_3_01MyCheckedMap_01_4.eps  (+3347 more)
examples/: eggshell.ini  peanut.ini  twotets.ini
newstructure/: CMakeLists.txt
newstructure/src/: main.cpp
src/: main.cpp
src/base/: AlignedAlloc.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  CmdLineParser.cpp  CmdLineParser.h  Color.h  DataArray.h  DebugUtils.cpp  DebugUtils.h  FastAccessToNamedResource.cpp  FastAccessToNamedResource.h  FileDirectory.cpp  FileDirectory.h  FlatArray.h  IStorage.h  Interval.h  Logger.cpp  Logger.h  Matrix.cpp  Matrix.h  MovingAverage.h  ProcessorInfo.cpp  ProcessorInfo.h  Profiler.cpp  Profiler.h  Quaternion.h  Ray.h  SIMDVecN.h  SettingsDB.cpp  SettingsDB.h  SettingsScript.cpp  SettingsScript.h  String.cpp  String.h  StringBase.h  Value.cpp  Value.h  ValueStorage.cpp  ValueStorage.h  (+27 more)
src/deformable/: AvatarRing.cpp  AvatarRing.h  AvatarScalpel.cpp  AvatarScalpel.h  CellularMesh.cpp  CellularMesh.h  CellularMeshTypes.h  CuttableMesh.cpp  CuttableMesh.h  HalfEdgeTetMesh.cpp  HalfEdgeTetMesh.h  IScalpel.cpp  IScalpel.h  TetSubdivider.cpp  TetSubdivider.h  VolMesh.cpp  VolMesh.h  VolMeshEntities.cpp  VolMeshEntities.h  VolMeshExport.cpp  VolMeshExport.h  VolMeshIO.cpp  VolMeshIO.h  VolMeshRender.cpp  VolMeshRender.h  VolMeshSamples.cpp  VolMeshSamples.h  VolMeshStats.cpp  VolMeshStats.h  test_HalfEdgeTetMesh.cpp  test_HalfEdgeTetMesh.h  test_VolMesh.cpp
src/elastic/: CMakeLists.txt  avatarring.cpp  avatarring.h  avatarscalpel.cpp  avatarscalpel.h  cuttablemesh.cpp  cuttablemesh.h  iavatar.cpp  iavatar.h  test_volmesh.cpp  test_volmesh.h  tetsubdivider.cpp  volmesh.cpp  volmesh.h  volmeshentities.h  volmeshio.cpp  volmeshrender.cpp  volmeshrender.h  volmeshsamples.cpp  volmeshsamples.h  volmeshstats.cpp
src/glbackend/: CMakeLists.txt  glbindable.cpp  glbindable.h  glbuffer.cpp  glfont.cpp  glfont.h  glfuncs.cpp  glmeshbuffer.cpp  glmeshbuffer.h  glscreen.cpp  glscreen.h  glshader.cpp  glshader.h  glshadermanager.cpp  glshadermanager.h  gltexture.cpp  gltexture.h  gltexturemanager.cpp  gltexturemanager.h
src/graphics/: AABB.cpp  AABB.h  AppScreen.cpp  AppScreen.h  ArcBallCamera.cpp  ArcBallCamera.h  Easing.h  GLFuncs.cpp  GLFuncs.h  GLMemBuffer.cpp  GLMemBuffer.h  GLMeshBuffer.cpp  GLMeshBuffer.h  GLShader.cpp  GLShader.h  GLSurface.cpp  GLSurface.h  GLTexture.cpp  GLTexture.h  GLTypes.h  GenCylinder.cpp  GenCylinder.h  GenCylinderBase.cpp  GenCylinderBase.h  Geometry.cpp  Geometry.h  Gizmo.cpp  Gizmo.h  HalfEdgeTetMesh.cpp  HalfEdgeTetMesh.h  IMouseListener.h  Intersections.cpp  Intersections.h  Lerping.h  Mesh.cpp  Mesh.h  MorphingSphere.cpp  MorphingSphere.h  ProfileCurve.h  SGBox.cpp  (+47 more)
src/scene/: CMakeLists.txt  arcballcamera.cpp  arcballcamera.h  geometry.cpp  geometry.h  gizmo.cpp  gizmo.h  sgassetmanager.cpp  sgbox.cpp  sgbox.h  sgeffect.cpp  sgengine.cpp  sgengine.h  sgfloor.h  sgheaders.cpp  sgheaders.h  sgmesh.h  sgnode.cpp  sgnode.h  sgquad.cpp  sgquad.h  sgtransform.cpp  sgtransform.h  surfacemesh.cpp  surfacemesh.h
(+66 files in other folders)
